--- a/pom.xml
+++ b/pom.xml
@@ -7,33 +7,54 @@
   <version>1.0-SNAPSHOT</version>
   <name>firstboot Maven Webapp</name>
   <url>http://maven.apache.org</url>
+  <!--
+spring boot 父节点依赖,引入这个之后相关的引入就不需要添加version配置，spring boot会自动选择最合适的版本进行添加。
+-->
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
     <version>1.4.1.RELEASE</version>
   </parent>
 
+
+
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <!-- 指定一下jdk的版本 ，这里我们使用jdk 1.8 ,默认是1.6 -->
     <java.version>1.8</java.version>
   </properties>
 
   <dependencies>
-        <!-- 添加fastjson 依赖包. -->
-        <dependency>
-          <groupId>com.alibaba</groupId>
-          <artifactId>fastjson</artifactId>
-          <version>1.2.15</version>
-        </dependency>
 
-        <!-- spring boot devtools 依赖包. -->
-        <dependency>
-          <groupId>org.springframework.boot</groupId>
-          <artifactId>spring-boot-devtools</artifactId>
-          <optional>true</optional>
-          <scope>true</scope>
-        </dependency>
-    </dependencies>
+    <!--
+        spring-boot-starter-web: MVC,AOP的依赖包....
+     -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+      <!--
+          <version></version>
+          由于我们在上面指定了 parent(spring boot)
+       -->
+    </dependency>
+
+    <!-- 添加fastjson 依赖包. -->
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>fastjson</artifactId>
+      <version>1.2.15</version>
+    </dependency>
+
+    <!-- spring boot devtools 依赖包. -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-devtools</artifactId>
+      <optional>true</optional>
+      <scope>true</scope>
+    </dependency>
+
+
+  </dependencies>
   <build>
     <finalName>firstboot</finalName>
   </build>
