--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,10 @@ spring.datasource.min-idle=8
 spring.datasource.initial-size=10
 
 spring.jpa.database = MYSQL
+
+spring.mvc.view.prefix=/WEB-INF/view/
+spring.mvc.view.suffix=.jsp
+
 # Show or not log for each sql query
 spring.jpa.show-sql = true
 # Hibernate ddl auto (create, create-drop, update)
@@ -26,3 +30,5 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 server.port = 8086
+
+server.context-path=/firstboot
