--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port = 8080
 banner.charset=UTF-8
 server.tomcat.uri-encoding=UTF-8
 spring.http.encoding.charset=UTF-8
@@ -9,16 +10,43 @@ spring.datasource.url = jdbc:mysql://localhost:3306/testboot
 spring.datasource.username = root
 spring.datasource.password = root
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
-spring.datasource.max-active=20
-spring.datasource.max-idle=8
-spring.datasource.min-idle=8
-spring.datasource.initial-size=10
+#使用Druid数据源
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 
-spring.jpa.database = MYSQL
+
+# 初始化大小，最小，最大
+spring.datasource.initialSize=5
+spring.datasource.minIdle=5
+spring.datasource.maxActive=20
+
+# 配置获取连接等待超时的时间
+spring.datasource.maxWait=60000
+
+
+# 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
+spring.datasource.timeBetweenEvictionRunsMillis=60000
+
+# 配置一个连接在池中最小生存的时间，单位是毫秒
+spring.datasource.minEvictableIdleTimeMillis=300000
+spring.datasource.validationQuery=SELECT 1 FROMDUAL
+spring.datasource.testWhileIdle=true
+spring.datasource.testOnBorrow=false
+spring.datasource.testOnReturn=false
+# 打开PSCache，并且指定每个连接上PSCache的大小
+spring.datasource.poolPreparedStatements=true
+spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
+# 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
+spring.datasource.filters=stat,wall,log4j
+# 通过connectProperties属性来打开mergeSql功能；慢SQL记录
+spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+# 合并多个DruidDataSource的监控数据
+spring.datasource.useGlobalDataSourceStat=false
 
 spring.mvc.view.prefix=/WEB-INF/view/
 spring.mvc.view.suffix=.jsp
 
+
+spring.jpa.database = MYSQL
 # Show or not log for each sql query
 spring.jpa.show-sql = true
 # Hibernate ddl auto (create, create-drop, update)
@@ -29,6 +57,8 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
-server.port = 8086
 
-server.context-path=/firstboot
+
+#server.context-path=/firstboot
+#暂时不用redis，所以none，spring.session.store-type=reids
+spring.session.store-type=none
