--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,7 +45,6 @@ spring.datasource.useGlobalDataSourceStat=false
 spring.mvc.view.prefix=/WEB-INF/view/
 spring.mvc.view.suffix=.jsp
 
-
 spring.jpa.database = MYSQL
 # Show or not log for each sql query
 spring.jpa.show-sql = true
@@ -57,8 +56,17 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
-
-
 #server.context-path=/firstboot
 #暂时不用redis，所以none，spring.session.store-type=reids
 spring.session.store-type=none
+
+#redis的IP地址
+spring.redis.host=192.168.192.152
+#redis的端口
+spring.redis.port=6379
+#redis的密码
+spring.redis.password=root
+spring.redis.database=0
+
+#日志输出目录
+logging.path=D:\\testLockBack
