--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,12 @@ spring boot 父节点依赖,引入这个之后相关的引入就不需要添加v
       <version>1.0.18</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.mybatis.spring.boot</groupId>
+      <artifactId>mybatis-spring-boot-starter</artifactId>
+      <version>1.1.1</version>
+    </dependency>
+
     <!-- tomcat 的支持.-->
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -100,8 +106,16 @@ spring boot 父节点依赖,引入这个之后相关的引入就不需要添加v
       <groupId>org.apache.tomcat.embed</groupId>
       <artifactId>tomcat-embed-jasper</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.mybatis</groupId>
+      <artifactId>mybatis-spring</artifactId>
+      <version>1.3.0</version>
+    </dependency>
 
-
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-redis</artifactId>
+    </dependency>
 
   </dependencies>
 
