--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,17 @@ spring boot 父节点依赖,引入这个之后相关的引入就不需要添加v
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-taglibs</artifactId>
     </dependency>
+
+      <dependency>
+          <groupId>org.apache.curator</groupId>
+          <artifactId>curator-recipes</artifactId>
+          <version>2.7.0</version>
+      </dependency>
+
+      <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-amqp</artifactId>
+       </dependency>
   </dependencies>
 
 
