--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,11 +9,11 @@ banner:
 spring:
     application:
         name: rabbitmq-hello
-    rabbitmq:
-        host: localhost
-        port: 5672
-        username: cailineng
-        password: cailineng
+  ##  rabbitmq:
+  ##      host: localhost
+  ##      port: 5672
+  ##      username: cailineng
+  ##      password: cailineng
     http:
         encoding:
             charset: UTF-8
