--- a/pom.xml
+++ b/pom.xml
@@ -138,19 +138,17 @@ spring boot 父节点依赖,引入这个之后相关的引入就不需要添加v
     </dependency>
 
     <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-security</artifactId>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi</artifactId>
+      <version>3.10-FINAL</version>
     </dependency>
 
-    <dependency>
-      <groupId>org.thymeleaf.extras</groupId>
-      <artifactId>thymeleaf-extras-springsecurity4</artifactId>
-    </dependency>
+      <dependency>
+          <groupId>org.apache.poi</groupId>
+          <artifactId>poi-ooxml</artifactId>
+          <version>3.10-FINAL</version>
+      </dependency>
 
-    <dependency>
-      <groupId>org.springframework.security</groupId>
-      <artifactId>spring-security-taglibs</artifactId>
-    </dependency>
 
       <dependency>
           <groupId>org.apache.curator</groupId>
@@ -162,6 +160,19 @@ spring boot 父节点依赖,引入这个之后相关的引入就不需要添加v
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-starter-amqp</artifactId>
        </dependency>
+
+      <dependency>
+        <groupId>org.bouncycastle</groupId>
+        <artifactId>bcprov-jdk16</artifactId>
+        <version>1.46</version>
+      </dependency>
+
+    <dependency>
+      <groupId>net.gplatform</groupId>
+      <artifactId>Sdk4J</artifactId>
+      <version>2.0</version>
+    </dependency>
+
   </dependencies>
 
 
