--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,11 @@ spring boot 父节点依赖,引入这个之后相关的引入就不需要添加v
       <version>1.2.15</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-mongodb</artifactId>
+    </dependency>
+
     <!-- spring boot devtools 依赖包. -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
