--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,15 +1,21 @@
 server:
     port: 8080
     tomcat.uri-encoding: UTF-8
-    context-path: /firstboot
+    servlet:
+        context-path: /firstboot
 
 banner:
-    charset: UTF-8
+    servlet:
+        charset: UTF-8
 
 spring:
     application:
         name: rabbitmq-hello
     data:
+        elasticsearch:
+            repositories:
+                enabled: true
+            cluster-nodes: 192.168.116.100:9300
         mongodb:
              uri: mongodb://linengtest:pwd@47.107.183.40:27017/linengtest
 #            host: 47.107.183.40
