--- a/pom.xml
+++ b/pom.xml
@@ -183,6 +183,11 @@ spring boot 父节点依赖,引入这个之后相关的引入就不需要添加v
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
     </dependency>
+      <dependency>
+          <groupId>commons-collections</groupId>
+          <artifactId>commons-collections</artifactId>
+          <version>3.2.2</version>
+      </dependency>
 
   </dependencies>
 
