--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.lineng.firstboot</groupId>
   <artifactId>firstboot</artifactId>
-  <packaging>war</packaging>
+  <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>firstboot Maven Webapp</name>
   <url>http://maven.apache.org</url>
