--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -108,4 +108,4 @@ logging:
     config: classpath:logback-spring.xml
 mybatis:
   mapperLocations: classpath:mybatis/*.xml
-
+  type-aliases-package: com.lineng.mapper
