--- a/pom.xml
+++ b/pom.xml
@@ -99,11 +99,6 @@ spring boot 父节点依赖,引入这个之后相关的引入就不需要添加v
       <version>1.0.18</version>
     </dependency>
 
-    <dependency>
-      <groupId>org.mybatis.spring.boot</groupId>
-      <artifactId>mybatis-spring-boot-starter</artifactId>
-      <version>1.3.1</version>
-    </dependency>
 
     <!-- tomcat 的支持.-->
     <dependency>
@@ -178,17 +173,21 @@ spring boot 父节点依赖,引入这个之后相关的引入就不需要添加v
       <artifactId>Sdk4J</artifactId>
       <version>2.0</version>
     </dependency>
-
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
-    </dependency>
       <dependency>
           <groupId>commons-collections</groupId>
           <artifactId>commons-collections</artifactId>
           <version>3.2.2</version>
       </dependency>
-
+    <dependency>
+      <groupId>com.baomidou</groupId>
+      <artifactId>mybatis-plus-boot-starter</artifactId>
+      <version>3.4.1</version>
+    </dependency>
+    <dependency>
+      <groupId>com.baomidou</groupId>
+      <artifactId>mybatis-plus-extension</artifactId>
+      <version>3.4.1</version>
+    </dependency>
   </dependencies>
 
 
